Implement markRanges method (#130)
Implements the long awaited feature to highlight ranges. Closes #109

--- a/.eslintrc
+++ b/.eslintrc
@@ -58,6 +58,14 @@
         "consistent-this": "error",
         "no-tabs": "error",
         "arrow-spacing": "error",
-        "one-var": "error"
+        "one-var": "error",
+        "complexity": [
+            "error",
+            10
+        ],
+        "max-depth": [
+            "error",
+            8
+        ]
     }
 }
