Outsource RegExpCreator code into separate class

--- a/.eslintrc
+++ b/.eslintrc
@@ -48,7 +48,10 @@
     "no-useless-escape": "warn",
     "indent": [
       "error",
-      2
+      2,
+      {
+        "SwitchCase": 1
+      }
     ],
     "linebreak-style": [
       "error",
