--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "rollup-plugin-cleanup": "^2.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "uglify-es": "^3.3.4"
+    "rollup-plugin-uglify": "^3.0.0"
   }
 }
