--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "rollup-plugin-cleanup": "^2.0.0",
     "rollup-plugin-commonjs": "^9.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^3.0.0"
+    "rollup-plugin-terser": "^1.0.1"
   }
 }
