--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "test": "npm run build"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^5.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "eslint": "^5.8.0",
     "eslint-plugin-jasmine-jquery": "^1.0.0",
     "handlebars": "^4.0.11",
     "jasmine-core": "^3.2.0",
@@ -58,7 +58,7 @@
     "karma-summary-reporter": "^1.4.0",
     "nodemon": "^1.14.10",
     "phantomjs-prebuilt": "^2.1.16",
-    "rollup": "^0.66.0",
+    "rollup": "^0.67.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-commonjs": "^9.0.0",
