--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "mark.js",
-  "version": "8.11.1",
+  "version": "9.0.0",
   "keywords": [
     "mark.js",
     "markjs",
@@ -25,7 +25,7 @@
   "description": "Highlight keywords using JavaScript. Intended for every use case. Can e.g. be used to mark text in search results.",
   "main": "dist/mark.js",
   "moduleType": [
-    "global", "amd"
+    "globals", "amd"
   ],
   "repository": {
     "type": "git",
