Added ES6 module support, 'PhantomJs' replaced by 'ChromeHeadless'.

--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
     "jquery": "^3.2.1",
     "jsdoc": "^3.5.5",
     "karma": "^3.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^2.0.0",
     "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sauce-launcher": "^1.2.0",
     "karma-spec-reporter": "0.0.32",
     "karma-summary-reporter": "^1.4.0",
     "nodemon": "^1.14.10",
-    "phantomjs-prebuilt": "^2.1.16",
+    "puppeteer": "^13.0.0",
     "rollup": "^0.67.0",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-cleanup": "^3.0.0",
