prepared to release the v1.0.3
Got rid of capturing group in `createSynonymsRegExp()` method (it breaks group/term relation when using synonyms with combinePatterns option, which resulted in undefined term in filter callback).

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,18 @@
-# Dependencies
-node_modules/
+# Files
 package-lock.json
+.editorconfig
+.gitattributes
+.gitignore
+.jsbeautifyrc
+.eslintrc.json
 
 # Personal
 TODO
 npm-debug.log*
-sc-karma*.log
 
 # Directories
-build/doc/
-build/coverage/
+node_modules/
+build/
 test/
+.git/
 .github/
