--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -15,8 +15,8 @@ jobs:
           node-version: 16
       - name: Install dependencies
         run: npm install
-      - name: Run test
-        run: npm test
+      - name: Run build
+        run: npm build
 
   publish-npm:
     needs: build
