--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.1.1",
     "nodemon": "^1.14.10",
+    "puppeteer": "^19.2.0",
     "rollup": "^2.68.0",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-version-injector": "^1.3.3"
