--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@metahub/karma-jasmine-jquery": "^4.0.1",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -56,11 +57,11 @@
     "karma-cli": "^2.0.0",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
-    "karma-jasmine-jquery": "^0.1.1",
     "karma-sauce-launcher": "^4.3.6",
     "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.1.1",
     "nodemon": "^1.14.10",
+    "puppeteer": "^19.2.0",
     "rollup": "^2.68.0",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-version-injector": "^1.3.3"
