--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "eslint": "eslint src/ test/",
     "karma": "karma start build/karma.config.js",
+    "jasmine": "jasmine start test/spec/*.js",
     "copy-files": "node build/copy-types-files.js",
     "jsdoc": "jsdoc src/lib/ -d build/doc -R README.md -P package.json -r",
     "compile": "rollup -c build/rollup.config.js",
@@ -52,6 +53,7 @@
     "jasmine-core": "^4.5.0",
     "jquery": "^3.2.1",
     "jsdoc": "^4.0.0",
+    "jsdom": "^21.1.1",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
