fixing related surrogate pairs, test, a lot of small changes

--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "2.3.0",
   "keywords": [
     "advanced-mark.js",
-    "mark.js",
-    "markjs",
-    "mark",
-    "jquery.mark",
-    "highlight",
+    "highlight-text",
+    "highlight-words",
     "search",
     "jquery",
     "javascript",
-    "text",
-    "keyword"
+    "mark"
   ],
   "license": "MIT",
   "author": {
