--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,5 +1,7 @@
 {
   "rules": {
-    "no-invalid-this": "off"
+    "no-var": "off",
+    "no-invalid-this": "off",
+    "no-unused-vars": "off"
   }
 }
