simplified DOMIterator's code
It's removes the ability to highlight in nested iframes

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint": "eslint src/ test/",
     "karma": "karma start build/karma.config.js",
     "copy-files": "node scripts/copy-types-files.js",
-    "test-jsdom": "node jsdom-tests/test.js && node jsdom-tests/jquery-test.js",
+    "test-jsdom": "node jsdom-tests/test.js",
     "jsdoc": "jsdoc src/lib/ -d build/doc -R README.md -P package.json -r",
     "compile": "rollup -c build/rollup.config.js",
     "build": "npm run test && npm run copy-files && npm run jsdoc",
