--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advanced-mark.js",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "keywords": [
     "highlight",
     "highlight-text",
@@ -30,7 +30,7 @@
     "eslint": "eslint src/ test/",
     "karma": "karma start build/karma.config.js",
     "copy-files": "node scripts/copy-types-files.js && node scripts/add-import.js",
-    "test-jsdom": "node jsdom-tests/test.js && node jsdom-tests/jquery-test.js",
+    "test-jsdom": "node jsdom-tests/test.js",
     "jsdoc": "jsdoc src/lib/ -d build/doc -R README.md -P package.json -r",
     "compile": "rollup -c build/rollup.config.js",
     "build": "npm run test && npm run copy-files && npm run jsdoc",
@@ -38,14 +38,14 @@
     "test": "npm run eslint && npm run compile && npm run karma && npm run test-jsdom"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.26.10",
     "@babel/plugin-transform-object-assign": "^7.22.5",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.26.9",
     "@metahub/karma-jasmine-jquery": "^4.0.1",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "eslint": "^8.28.0",
     "eslint-plugin-jasmine-jquery": "^1.0.0",
     "handlebars": "^4.0.11",
@@ -60,9 +60,9 @@
     "karma-jasmine": "^5.1.0",
     "karma-spec-reporter": "^0.0.36",
     "karma-summary-reporter": "^4.0.1",
-    "puppeteer": "^22.11.2",
-    "rollup": "^2.68.0",
-    "rollup-plugin-cleanup": "^3.0.0",
+    "puppeteer": "^24.6.0",
+    "rollup": "^2.79.2",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-version-injector": "^1.3.3"
   }
 }
